# IAM

./: .gitignore  Cargo.toml  Dockerfile  README.md  env_example  run_docker.py  todo
src/: database.rs  encryption.rs  hashing.rs  jwt.rs  lib.rs  main.rs  middleware.rs  server.rs
src/errors/: custom_errors.rs  mod.rs
src/tests/: mod.rs  tests.rs
