[package]
name = "IAM"
version = "0.1.0"
edition = "2021"
authors = ["lowpolycat1"]
description = "A Identity and Access Management System"
license = "MIT"
repository = "https://github.com/lowpolycat1/IAM"


[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { version = "2.0.12" }
surrealdb = { version = "2.2.2" }
actix-web = { version = "4.10.2" }


[build-dependencies]


[dev-dependencies]


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
rpath = false
